examples/type_system/failing/38_top_level_effect_rejected.flx
// A4 matrix: effectful top-level expression is rejected.

print("top-level effect")
